<resources>
    <string name="app_name">Fridge</string>
    <string name="Продукты">Продукты</string>
    <string name="Пользователь">Пользователь</string>
    <string name="Завтрак">Завтрак</string>
    <string name="Обед">Обед</string>
    <string name="Ужин">Ужин</string>
    <string name="Мясоед">Мясоед</string>
    <string name="Постящийся">Постящийся</string>
    <string name="Вегетарианец">Вегетарианец</string>
    <string name="Настройки">Настройки</string>
    <string name="Выберите_предпочтение">Выберите предпочтение:</string>
    <string name="Выберите_продукты">Выберите продукты:</string>
    <string name="Ваши_настройки">Ваши настройки</string>
    <string name="На_диете">На диете</string>
    <string name="Еда_для_беременных">Еда для беременных</string>
    <string name="Fridge">Fridge</string>
    <string name="Принять">Принять</string>
    <string name="Выберите_время_для_питания">Выберите время для питания</string>
    <string name="Лук_порей">Лук-порей</string>
    <string name="Морковь">Морковь</string>
    <string name="Кокосовое_молоко">Кокосовое молоко</string>
    <string name="Тыква">Тыква</string>
    <string name="Картофель">Картофель</string>
    <string name="Авокадо">Авокадо</string>
    <string name="Сельдерей">Сельдерей</string>
    <string name="Свекла">Свекла</string>
    <string name="Помидоры">Помидоры</string>
    <string name="Консервированная_кукуруза">Консервированная кукуруза</string>
    <string name="Свежий_красный_перец">Свежий красный перец</string>
    <string name="Цветная_капуста">Цветная капуста</string>
    <string name="Бананы">Бананы</string>
    <string name="Клубника">Клубника</string>
    <string name="Голубика">Голубика</string>
    <string name="Тест">Тест</string>
    <string name="Изменить">Изменить</string>
    <string name="Шампиньоны">Брокколи</string>
    <string name="Лук_репчатый">Лук репчатый</string>
    <string name="todo">TODO</string>
    <string name="История">История</string>
    <string name="Список_желаемого">Список желаемого</string>
    <string name="Очистить">Очистить</string>
    <string name="Избранное">Избранное</string>
    <string name="Добавить_в_избранное">Добавить в избранное</string>
</resources>
