<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4FC">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        android:textSize="33sp"
        android:id="@+id/choose1"
        android:text="@string/Выберите_предпочтение"/>


    <Button
        android:id="@+id/acceptsetting"
        android:layout_width="320sp"
        android:layout_height="79sp"
        android:textSize="40sp"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95"
        android:onClick="onMain"
        android:background="@drawable/button_bg_rounded_corners"
        android:text="@string/Принять"
        android:textColor="#F4F4FC"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radiogroup">

            <RadioButton
                android:id="@+id/Radiobutton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:text="@string/Вегетарианец"
                android:textColor="#000000"
                android:textSize="27sp"
                android:theme="@style/MyCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <RadioButton
                android:id="@+id/Radiobutton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:text="@string/Мясоед"
                android:textColor="#000000"
                android:textSize="27sp"
                android:theme="@style/MyCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.30" />

            <RadioButton
                android:id="@+id/Radiobutton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:text="@string/Постящийся"
                android:textColor="#000000"
                android:textSize="27sp"
                android:theme="@style/MyCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.35" />

            <RadioButton
                android:id="@+id/Radiobutton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:text="@string/Диета"
                android:textColor="#000000"
                android:textSize="27sp"
                android:theme="@style/MyCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.40" />

            <RadioButton
                android:id="@+id/Radiobutton5"
                android:layout_width="440dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:scaleX="1"
                android:scaleY="1"
                android:text="@string/Еда_для_беременных"
                android:textColor="#000000"
                android:textSize="27sp"
                android:theme="@style/MyCheckBox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.28"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.45" />

        </RadioGroup>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>