<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#F4F4FC"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="110dp"
        android:layout_marginStart="48dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MainText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/MainText"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Fridge"
        android:textColor="#000000"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128" />


    <Button
        android:id="@+id/Products"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:gravity="center"
        android:onClick="onProducts"
        android:text="@string/Продукты"
        android:textColor="#F4F4FC"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/UserSetting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.39" />


    <Button
        android:id="@+id/UserSetting"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:gravity="center"
        android:onClick="onUserSetting"
        android:text="@string/Пользователь"
        android:textAllCaps="false"
        android:textColor="#F4F4FC"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/Setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Products"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/Setting"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:gravity="center"
        android:onClick="onSetting"
        android:text="@string/Настройки"
        android:textAllCaps="false"
        android:textColor="#F4F4FC"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserSetting"
        app:layout_constraintVertical_bias="0.89" />




</android.support.constraint.ConstraintLayout>