<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4FC"
    tools:context=".Setting">


    <TextView
        android:id="@+id/setting"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="#F4F4FC"
        android:gravity="center"
        android:text="@string/Ваши_настройки"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/writeinformation"
        android:layout_width="420dp"
        android:layout_height="151dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="#F4F4FC"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <Button
        android:id="@+id/accpetsetting"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="169dp"
        android:layout_height="70dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="onMain2"
        android:text="@string/Принять"
        android:textColor="#F4F4FC"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/changesetting2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />

    <Button
        android:id="@+id/changesetting2"
        style="@android:style/Widget.Holo.Light.Button.Toggle"
        android:layout_width="169dp"
        android:layout_height="70dp"
        android:background="@drawable/button_bg_rounded_corners"
        android:onClick="onMain3"
        android:text="@string/Изменить"
        android:textColor="#F4F4FC"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/accpetsetting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.972" />




</android.support.constraint.ConstraintLayout>